# sistema.ctspskills

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  DEPLOY_DEBIAN12.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/init-scripts/: init-db.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: index.ts  useApi.ts  useLocalStorage.ts
frontend/src/pages/: UnauthorizedPage.tsx
frontend/src/routes/: ProtectedRoute.tsx  index.tsx
frontend/src/services/: analyticsService.ts  api.ts  assessmentService.ts  authService.ts  competitorService.ts  dashboardService.ts  enrollmentService.ts  goalService.ts  index.ts  modalityService.ts  platformSettingsService.ts  reportService.ts  trainingService.ts  trainingTypeService.ts
frontend/src/stores/: authStore.ts  index.ts  platformSettingsStore.ts  uiStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  format.ts  index.ts  pdfGenerator.ts
migrations/: env.py
migrations/versions/: 20240115_000000_0001_initial_identity_tables.py  20240116_000000_0002_modality_tables.py  20240117_000000_0003_training_tables.py  20240120_000000_0004_assessment_tables.py  20240121_000000_0005_training_type_configs.py  20240122_000000_0006_evaluator_modalities.py  20240123_000000_0007_add_must_change_password.py  20240124_000000_0008_platform_settings.py  20260220_000000_0009_encrypt_competitor_pii.py  20260306_000000_0010_add_sub_competences.py  20260321_000000_0011_add_exam_times.py  __init__.py
scripts/: cleanup_database.py  seed_database.py
src/: __init__.py
src/application/: __init__.py
src/application/analytics/: __init__.py
src/application/assessment/: __init__.py
src/application/extras/: __init__.py
src/application/identity/: __init__.py
src/application/modality/: __init__.py
src/application/platform/: __init__.py
src/application/training/: __init__.py
src/config/: logging_config.py  settings.py
src/domain/: __init__.py
src/domain/analytics/: __init__.py
src/domain/assessment/: __init__.py  exceptions.py
src/domain/extras/: __init__.py  exceptions.py
src/domain/identity/: __init__.py  exceptions.py
src/domain/modality/: __init__.py  exceptions.py
src/domain/platform/: __init__.py  exceptions.py
src/domain/training/: __init__.py  exceptions.py
src/infrastructure/: __init__.py  container.py
src/infrastructure/database/: __init__.py  base.py  session.py  types.py  unit_of_work.py
src/infrastructure/security/: __init__.py  jwt_handler.py  password_hasher.py
src/presentation/: __init__.py  main.py
src/presentation/schemas/: __init__.py  analytics_schema.py  assessment_schema.py  auth_schema.py  common.py  evaluator_modality_schema.py  extras_schema.py  modality_schema.py  platform_schema.py  training_schema.py  user_schema.py
src/shared/: __init__.py
src/shared/constants/: __init__.py  enums.py
src/shared/domain/: __init__.py  aggregate_root.py  entity.py  repository.py  value_object.py
src/shared/exceptions/: __init__.py  application_exception.py  base.py  domain_exception.py
src/shared/utils/: __init__.py  date_utils.py  validators.py
tests/: conftest.py
tests/integration/: test_analytics_endpoints.py  test_assessment_endpoints.py  test_auth_endpoints.py  test_extras_endpoints.py  test_modality_endpoints.py  test_sub_competences_and_grades.py  test_training_endpoints.py
tests/unit/application/: __init__.py  test_register_user.py
(+277 files in other folders)
